# LEOHS: Landsat ETM+ OLI Harmonization Script
# Copyright (C) 2025 Galen Richardson
# This file is licensed under GPL-3.0-or-later
# Related Publication: https://doi.org/10.1080/10106049.2025.2538108
[project]
name = "leohs"
version = "1.2.0"
description = "Landsat ETM+ OLI Harmonization Script"
authors = [
  { name="Galen Richardson", email="galenrichardsonam@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
  "geopandas==1.1.3",
  "shapely==2.1.2",
  "rasterio==1.4.4",
  "fiona==1.10.1",
  "geopy==2.4.1",
  "numpy==2.4.6",
  "pandas==3.0.3",
  "matplotlib==3.11.0",
  "scikit-learn==1.9.0",
  "joblib==1.5.3",
  "earthengine-api==1.7.30",
  "geemap==0.38.1",
  "xgboost==3.2.0",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: GIS",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent"
]
requires-python = "==3.13.*"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
leohs = "leohs.main:run_leohs"

[tool.setuptools.package-data]
"leohs.data" = ["WRS_overlaps.*"]
